# joinmarket-ng

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pwnhunter-gemini-chat-id  AGENTS.md  CHANGELOG.md  README-joinmarket-ng.md  README.md  config.toml.template  docker-compose.jam-ng-signet.yml  docker-compose.yml  install.sh  menu.sh  mkdocs.yml  pytest.ini  release-manifest-0.28.0.txt  requirements-docs.txt
.github/workflows/: ci.yaml  create-release.yaml  flatpak.yaml  pre-commit.yaml  properdocs-pages.yml  release.yaml
directory_server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
directory_server/src/directory_server/: heartbeat.py  message_router.py  server.py
directory_server/tests/: test_heartbeat.py
docs/: README-directory-server.md  README-jmwallet.md  README-maker.md  README-orderbook-watcher.md  README-scripts.md  README-signatures.md  README-taker.md  README-tui.md  README-tumbler.md  extension-documentation.md  install.md  joinmarket-ng-tui.md  license.md
docs/_scripts/: gen_ref_pages.py
docs/technical/: configuration.md  development.md  neutrino-tls.md  privacy.md  protocol.md  security.md  tumbler-redesign.md
flatpak/: jam-ng-entrypoint.sh  jam-ng-gui.py  jam-ng-stop.sh  org.joinmarketng.JamNG.desktop  org.joinmarketng.JamNG.metainfo.xml  org.joinmarketng.JamNG.yml  torrc
jm_tumbler/tests/: test_runner_transitions.py
jmcore/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
jmcore/src/jmcore/: __init__.py  bitcoin.py  cli_common.py  commitment_blacklist.py  directory_client.py  mempool_api.py  network.py  notifications.py  podle.py  settings.py  tor_control.py  tui.py  version.py
jmcore/src/jmcore/data/: config.toml.template  menu.joinmarket-ng.sh
jmcore/tests/: test_bitcoin.py  test_btc_script.py  test_cli_common.py  test_commitment_blacklist.py  test_crypto.py  test_directory_client_peerlist_race.py  test_models.py  test_network.py  test_podle.py  test_protocol.py  test_settings.py  test_tor_control.py  test_version.py
jmtumbler/: README.md  pyproject.toml
jmtumbler/tests/: test_cli.py  test_plan_builder.py  test_plan_persistence.py  test_runner_transitions.py
jmwallet/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
jmwallet/src/jmwallet/: history.py
jmwallet/src/jmwallet/backends/: base.py  bitcoin_core.py  descriptor_wallet.py  neutrino.py
jmwallet/src/jmwallet/cli/: bonds.py  cold_wallet.py  debug_info.py  freeze.py  history_cmd.py  mnemonic.py  registry.py  send.py  wallet.py
jmwallet/src/jmwallet/wallet/: __init__.py  bip32.py  coin_selection.py  display.py  models.py  service.py  signing.py  spend.py  sync.py
jmwallet/tests/: _jmwallet_test_helpers.py  test_backends.py  test_balance_confirmations.py  test_bip32.py  test_descriptor_wallet.py  test_history.py  test_signing.py  test_spend.py  test_utxo_selection.py  test_wallet_address_info.py  test_wallet_cli.py  test_wallet_info_filter.py  test_wallet_models.py  test_wallet_password_env.py
jmwalletd/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
jmwalletd/rootfs/etc/s6-overlay/s6-rc.d/jmwalletd-svc/: run
jmwalletd/rootfs/etc/s6-overlay/s6-rc.d/obwatcher/: run
jmwalletd/rootfs/etc/s6-overlay/s6-rc.d/tor-ready/: up
jmwalletd/src/jmwalletd/: __init__.py  _backend.py  app.py  auth.py  cli.py  deps.py  errors.py  log_buffer.py  models.py  send.py  state.py  wallet_ops.py  websocket.py
jmwalletd/src/jmwalletd/routers/: __init__.py  coinjoin.py  logs.py  obwatch.py  tumbler.py  wallet.py  wallet_data.py
jmwalletd/tests/: conftest.py  test_app_security.py  test_auth.py  test_backend_factory.py  test_cli.py  test_coinjoin_router.py  test_deps.py  test_idor_wallet_name.py  test_logs_router.py  test_models.py  test_obwatch_router.py  test_state.py  test_tumbler_router.py  test_wallet_data_router.py  test_wallet_ops.py  test_wallet_router.py  test_websocket.py
maker/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
maker/tests/: test_bond_protocol.py  test_bot.py  test_commitment_broadcast.py  test_config.py  test_fidelity.py  test_maker_cli.py  test_maker_protocol.py  test_multi_offer.py  (+2 more)
orderbook_watcher/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
orderbook_watcher/src/orderbook_watcher/: aggregator.py  main.py  server.py
orderbook_watcher/static/: app.js  index.html  swap_providers.css  swap_providers.html  swap_providers.js
orderbook_watcher/tests/: test_ow_config.py  test_peerlist_cleanup.py  test_server_feature_stats.py  test_server_swap_providers_page.py  test_server_uptime.py
scripts/: README.md  build-release.sh  build_docs.py  bump_version.py  changelog_commit_utils.py  ddos_test.py  dos_test.py  fidelity_bond_tool.py  fund-test-wallets.sh  generate_changelog.py  measure_orderbook_delays.py  menu.joinmarket-ng.sh  run_all_tests.sh  run_parallel_tests.sh  sign-release.sh  test_rate_limit.py  update-base-images.sh  update-deps.sh  update_readme_help.py  validate_commit_message.py  verify-release.sh
signatures/: README.md
taker/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
taker/src/taker/: cli.py  config.py  orderbook.py  taker.py
taker/src/taker/swap/: client.py  models.py  nostr.py
taker/tests/: test_broadcast.py  test_cli.py  test_cli_swap_confirmation.py  test_fee_rate.py  test_nostr_swap_rpc.py  test_orderbook.py  test_swap_client.py  test_swap_models.py  test_taker_config.py  test_taker_protocol.py
tests/: test_changelog_commit_workflow.py  test_release_scripts.py  test_tui.py
tumbler/: README.md  pyproject.toml
tumbler/src/tumbler/: __init__.py  builder.py  cli.py  confirmations.py  estimator.py  maker_policy.py  persistence.py  plan.py  runner.py
tumbler/tests/: test_amount_rounding.py  test_confirmations.py  test_estimator.py  test_maker_policy.py  test_plan_builder.py  test_plan_persistence.py  test_privacy_invariants.py  test_runner_transitions.py  test_tumbler_cli.py
(+46 files in other folders)
