[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joinmarket-orderbook-watcher"
version = "0.25.0"
description = "JoinMarket orderbook watcher and aggregator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "JoinMarket Contributors"}
]
dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "httpx-socks>=0.9.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PySocks>=1.7.1",
    "jmcore",
    "jmwallet",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.0.0",
    "pytest-rerunfailures>=14.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
orderbook-watcher = "orderbook_watcher.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "PL",
    "RUF",
]
ignore = [
    "S101",
    "S104",
    "S110",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW2901",
    "E501",
    "RUF006",
    "ASYNC110",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=orderbook_watcher --cov-report=html --cov-report=term --timeout=60"
